--- a/outfit/css/agenda.css
+++ b/outfit/css/agenda.css
@@ -101,6 +101,9 @@
         }
 
         /*~~~~~~~~~~ The list  ~~~~~~~~~~*/
+        .iep_syllabus_themes{
+            margin: 2em 0 1.5em 0;
+        }
         .iep_syllabus_themes>li{
                     margin: 1em 0 0 0;
                     list-style-type: none;
