MySQL_Data_Types end
Conflicts:
	.gitignore

--- a/outfit/css/common/themes/MatDes/text_schemes.css
+++ b/outfit/css/common/themes/MatDes/text_schemes.css
@@ -52,3 +52,7 @@ abbr+dfn>span:first-letter{
     color: #C5E1A5;
     font-weight: bold;
 }
+.code{
+    font-family: monospace;
+    color: #BAFFF5;
+}
