--- a/outfit/css/agenda.css
+++ b/outfit/css/agenda.css
@@ -105,8 +105,8 @@
             margin: 2em 0 1.5em 0;
         }
         .iep_syllabus_themes>li{
-                    margin: 1em 0 0 0;
-                    list-style-type: none;
+            margin: 1em 0 0 0;
+            list-style-type: decimal;
         }
         .iep_syllabus_themes>li>h3{
             display: inline-block;
