--- a/outfit/css/common/themes/MatDes/text_schemes.css
+++ b/outfit/css/common/themes/MatDes/text_schemes.css
@@ -5,54 +5,53 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* abbreviations and their definitions/explanations
    HTML: <abbr>DB</abbr><dfn id="DB"><span>Data</span><span>Base</span></dfn> */
-abbr{
+.reveal abbr{
     color: #FFF59D;
 }
-abbr+dfn:before{
+.reveal abbr+dfn:before{
     content: " = ";
 }
-abbr+dfn>span{
+.reveal abbr+dfn>span{
     display: inline-block; /* to apply :first-letter */
 }
-abbr+dfn>span:first-letter{
+.reveal abbr+dfn>span:first-letter{
     color: #FFF59D;
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* names */
-.name_product{
+.reveal .name_product{
     color: #C5CAE9;
 }
-.name_company{
+.reveal .name_company{
     color: #B2EBF2;
 }
-.name_person{
+.reveal .name_person{
     color: #B3E5FC;
 }
-.name_place{
+.reveal .name_place{
     color: #BBDEFB;
 }
 /* exclamation */
-.NB{
+.reveal .NB{
     color: #FF5722;
     font-weight: bold;
 }
-.important{
-    color: #FFAB91;
+.reveal .important{
     font-weight: bold;
 }
-.note{
+.reveal .note{
     font-style: italic;
     color: #ef9a9a;
 }
-.keyconcept{
+.reveal .keyconcept{
     color: #C5E1A5;
     font-style: italic;
 }
-.newterm{
+.reveal .newterm{
     color: #C5E1A5;
     font-weight: bold;
 }
-.code{
+.reveal .code{
     font-family: monospace;
     color: #BAFFF5;
 }
