Insert_delete_update_data END

--- a/outfit/css/common/themes/MatDes/text_schemes.css
+++ b/outfit/css/common/themes/MatDes/text_schemes.css
@@ -56,31 +56,27 @@
     color: #BAFFF5;
 }
 /* font sizes */
-.reveal .fs-small{
-    font-size: .5em;
-    line-height: .5em;
-}
 .reveal .fs-smallest{
     font-size: .4em;
-    line-height: .4em;
+    line-height: 1m;
 }
 .reveal .fs-smaller{
     font-size: .6em;
-    line-height: .6em;
+    line-height: 1.2;
 }
 .reveal .fs-small{
     font-size: .8em;
-    line-height: .8em;
+    line-height: 1.2;
 }
 .reveal .fs-big{
     font-size: 1.2em;
-    line-height: 1.2em;
+    line-height: 1.2;
 }
 .reveal .fs-biger{
     font-size: 1.4em;
-    line-height: 1.4em;
+    line-height: 1.2;
 }
 .reveal .fs-bigest{
     font-size: 1.6em;
-    line-height: 1.6em;
+    line-height: 1.2;
 }
