--- a/outfit/css/agenda.css
+++ b/outfit/css/agenda.css
@@ -103,10 +103,10 @@
         /*~~~~~~~~~~ The list  ~~~~~~~~~~*/
         .iep_syllabus_themes{
             margin: 2em 0 1.5em 0;
+            list-style-type: none;
         }
         .iep_syllabus_themes>li{
             margin: 1em 0 0 0;
-            list-style-type: decimal;
         }
         .iep_syllabus_themes>li>h3{
             display: inline-block;
